# sceleto

./: .gitignore  README.md  pyproject.toml  setup.cfg
docs/: advanced.md
src/sceleto/: __init__.py  us.py
src/sceleto/data/: __init__.py
src/sceleto/markers/: __init__.py  _base.py  _classic.py  _classic_v1compat.py  _gene_filter.py  _graph.py  _hierarchy.py
src/sceleto/markers/graph/: __init__.py  _context.py  _features.py  _labels.py  _local.py  _onestep.py  _prioritize.py  _viz.py
