[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sceleto"
version = "0.0.2"
description = "Skeleton for sceleto (marker finding)"
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sceleto*"]

[tool.setuptools.package-data]
"sceleto.data" = ["*.json"]

